--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,9 @@
 }
 
 body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
     background-color: #6699FF;
     color: #fff;
 }
@@ -43,7 +46,7 @@ header nav ul li {
     align-self: center;
 }
 
-header a {
+header a, footer a {
     color: #fff;
     font-weight: bold;
     font-style: italic;
@@ -53,28 +56,31 @@ header a {
 /* MAIN SECTION */
 
 main {
-    width: auto;
-    margin-top: 3rem;
-    margin-bottom: 3rem;
+    display: flex;
+    height: 78vh;
+    align-self: center;
+}
+
+#main-content {
     display: flex;
     flex-direction: column;
+    justify-content: center;
 }
 
 #main-primary {
-    margin-top: 2rem;
-    margin-left: 10rem;
+    margin-top: 1rem, 2rem;
     font-size: 7rem;
 }
 
 #main-secondary {
-    margin-top: 2rem;
-    margin-left: 15rem;
+    margin-top: 1rem;
+    margin-left: 6rem;
     font-size: 2rem;
 }
 
 #main-btn-work {
     margin-top: 2rem;
-    margin-left: 40rem;
+    margin-left: 25rem;
     width: 150px;
     height: 80px;
     background-color: blue;
@@ -92,6 +98,26 @@ main {
 /* FOOTER */
 
 footer {
-    width: auto;
-    border: dashed red 2px;
+    display: flex;
+    justify-content: center;
+    margin-top: auto;
+    margin-bottom: 1rem;
+    border-top: .25rem solid white;
+}
+
+footer ul {
+    display: flex;
+    justify-content: space-around;
+    width: 80%;
+    margin-top: 1rem;
+    list-style-type: none;
+}
+
+footer ul li {
+    align-self: center;
+}
+
+footer a {
+    font-size: 20px;
+    font-weight: bold;
 }
