--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif+HK:wght@900&display=swap');
+
+/** UNRESPONSIVE 1625 x 850 **/
+
 * {
     margin: 0;
     padding: 0;
@@ -9,6 +13,7 @@ body {
     min-height: 100vh;
     background-color: #6699FF;
     color: #fff;
+    font-family: 'Noto Serif HK', serif;
 }
 
 /* HEADER */
@@ -18,20 +23,22 @@ header {
     justify-content: space-between;
     margin: .5rem;
     padding: .5rem;
-    border-bottom: .25rem solid white;
+    border-bottom: .25rem solid blue;
 }
 
 .header-logo {
     margin: .5rem;
     padding: .5rem;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: 'Noto Serif HK', serif;
     font-weight: 500;
     font-size: 2.5rem;
     text-transform: uppercase;
+    letter-spacing: .75rem;
 }
 
 header nav {
     width: 60%;
+    letter-spacing: .25rem;
 }
 
 header nav ul {
@@ -78,9 +85,12 @@ main {
     font-size: 2rem;
 }
 
+/** VIEW MY WORK BUTTON **/
+
 #main-btn-work {
     margin-top: 2rem;
     margin-left: 25rem;
+    padding: .5rem;
     width: 150px;
     height: 80px;
     background-color: blue;
@@ -89,10 +99,12 @@ main {
     font-weight: bold;
     border-radius: 5px;
     border: none;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
 
-.accent {
-    color: blue;
+#main-btn-work:hover {
+    background-color: rgba(0, 0, 255, 0.50);
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
 /* FOOTER */
@@ -102,7 +114,7 @@ footer {
     justify-content: center;
     margin-top: auto;
     margin-bottom: 1rem;
-    border-top: .25rem solid white;
+    border-top: .25rem solid blue;
 }
 
 footer ul {
@@ -120,4 +132,13 @@ footer ul li {
 footer a {
     font-size: 20px;
     font-weight: bold;
+}
+
+/** MISC ACCENT COLORS **/
+.accent {
+    color: blue;
+}
+
+a:hover {
+    color: rgba(0, 0, 255, 0.75);
 }
