--- a/styles/style.css
+++ b/styles/style.css
@@ -11,7 +11,7 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    background-color: #6699FF;
+    background-color: #273c75;
     color: #fff;
     font-family: 'Noto Serif HK', serif;
 }
@@ -23,7 +23,7 @@ header {
     justify-content: space-between;
     margin: .5rem;
     padding: .5rem;
-    border-bottom: .25rem solid blue;
+    border-bottom: .25rem solid #218c74;
 }
 
 .header-logo {
@@ -93,7 +93,7 @@ main {
     padding: .5rem;
     width: 150px;
     height: 80px;
-    background-color: blue;
+    background-color: #218c74;
     color: #fff;
     font-size: 20px;
     font-weight: bold;
@@ -103,7 +103,7 @@ main {
 }
 
 #main-btn-work:hover {
-    background-color: rgba(0, 0, 255, 0.50);
+    background-color: rgba(33, 140, 116, 0.75);
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
@@ -114,7 +114,7 @@ footer {
     justify-content: center;
     margin-top: auto;
     margin-bottom: 1rem;
-    border-top: .25rem solid blue;
+    border-top: .25rem solid #218c74;
 }
 
 footer ul {
@@ -136,9 +136,9 @@ footer a {
 
 /** MISC ACCENT COLORS **/
 .accent {
-    color: blue;
+    color: #ffb142;
 }
 
 a:hover {
-    color: rgba(0, 0, 255, 0.75);
+    color: #218c74;
 }
