--- a/styles/style.css
+++ b/styles/style.css
@@ -34,6 +34,7 @@ header {
     font-size: 2.5rem;
     text-transform: uppercase;
     letter-spacing: .75rem;
+    text-shadow: 2px 2px black;
 }
 
 header nav {
@@ -58,6 +59,7 @@ header a, footer a {
     font-weight: bold;
     font-style: italic;
     text-decoration: none;
+    text-shadow: 2px 2px black;
 }
 
 /* MAIN SECTION */
@@ -77,6 +79,7 @@ main {
 #main-primary {
     margin-top: 1rem, 2rem;
     font-size: 7rem;
+    text-shadow: 2px 2px black;
 }
 
 #main-secondary {
@@ -132,6 +135,8 @@ footer ul li {
 footer a {
     font-size: 20px;
     font-weight: bold;
+    text-shadow: 2px 2px black;
+    letter-spacing: .10rem;
 }
 
 /** MISC ACCENT COLORS **/
