--- a/styles/style.css
+++ b/styles/style.css
@@ -139,6 +139,60 @@ footer a {
     letter-spacing: .10rem;
 }
 
+/** Contact Overlay **/
+
+#contact-overlay {
+    position: fixed;
+    display: none;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0,0.75);
+    z-index: 2;
+    cursor: pointer;
+}
+
+#contact-card {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    width: 500px;
+    height: 800px;
+    background-color: #273c75;
+    color: #fff;
+    font-weight: 500;
+    font-size: 25px;
+    border-radius: 5px;
+    border: .25rem solid #218c74;
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+#contact-portrait {
+    width: 45%;
+    border-radius: 50%;
+    border: .25rem solid #ffb142;
+}
+
+#card-body {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 100%;
+}
+
+#card-body > div {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    height: 50%;
+}
+ 
 /** MISC ACCENT COLORS **/
 .accent {
     color: #ffb142;
